kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
  labels:
    app: homework-deployment
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: homework-site-pod
  template:
    metadata:
      labels:
        app: homework-site-pod
    spec:
      containers:
      - name: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        image: nginx
        readinessProbe:
          exec:
            command:
            - test
            - -f
            - /homework/ready-html/index.html
          initialDelaySeconds: 5
          periodSeconds: 5
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "rm -rf /homework/* && echo 'Cleaning up /homework directory'"]
        ports:
        - containerPort: 8000
          name: site-pod-port
        volumeMounts:
        - name: workdir
          mountPath: /homework
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/
        - name:  configdir
          mountPath: /homework/conf
      dnsPolicy: Default
      volumes:
      - name: workdir
        persistentVolumeClaim:
          claimName: homework-pvc
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      - name: configdir
        configMap:
          name: homework-config
          items:
          - key: database_url
            path: database_url
          - key: api_key
            path: api_key
          - key: debug_mode
            path: debug_mode
